--- a/point-inside-shape.ipynb
+++ b/point-inside-shape.ipynb
@@ -1,16 +1,73 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Pseudocode\n",
+    "```plaintext\n",
+    "FUNCTION SegmentCheck(p1, p2, p):\n",
+    "    IF (p.x < MIN(p1.x, p2.x) OR p.x > MAX(p1.x, p2.x) OR\n",
+    "        p.y < MIN(p1.y, p2.y) OR p.y > MAX(p1.y, p2.y)) THEN\n",
+    "        RETURN False\n",
+    "    END IF\n",
+    "\n",
+    "    IF p1.x == p2.x THEN\n",
+    "        RETURN (p.x == p1.x)\n",
+    "    END IF\n",
+    "\n",
+    "    IF p1.y == p2.y THEN\n",
+    "        RETURN (p.y == p1.y)\n",
+    "    END IF\n",
+    "\n",
+    "    IF (p.x - p1.x) * (p2.y - p1.y) == (p.y - p1.y) * (p2.x - p1.x) THEN\n",
+    "        RETURN True\n",
+    "    ELSE\n",
+    "        RETURN False\n",
+    "    END IF\n",
+    "END FUNCTION\n",
+    "\n",
+    "\n",
+    "FUNCTION CheckIntersection(p1, p2, x, y):\n",
+    "    IF ( (p1.y > y AND p2.y > y) OR (p1.y <= y AND p2.y <= y) ) THEN\n",
+    "        RETURN False\n",
+    "    END IF\n",
+    "\n",
+    "    x_intersection = p1.x + (y - p1.y) * (p2.x - p1.x) / (p2.y - p1.y)\n",
+    "\n",
+    "    RETURN (x <= x_intersection)\n",
+    "END FUNCTION\n",
+    "\n",
+    "\n",
+    "FUNCTION PointInPolygon(point, polygon):\n",
+    "    IF (LENGTH(polygon) < 3) THEN\n",
+    "        RAISE ERROR \"The list of polygon points must have at least 3 points\"\n",
+    "    END IF\n",
+    "\n",
+    "    inside = False\n",
+    "    num_vertices = LENGTH(polygon)\n",
+    "    (x, y) = (point.x, point.y)\n",
+    "    p1 = polygon[0]\n",
+    "\n",
+    "    FOR i FROM 1 TO num_vertices:\n",
+    "        p2 = polygon[i MOD num_vertices]\n",
+    "\n",
+    "        IF PointOnSegment(p1, p2, point) THEN\n",
+    "            RETURN True\n",
+    "        END IF\n",
+    "\n",
+    "        IF CheckIntersection(p1, p2, x, y) THEN\n",
+    "            inside = NOT inside\n",
+    "        END IF\n",
+    "\n",
+    "        p1 = p2\n",
+    "    END FOR\n",
+    "\n",
+    "    RETURN inside\n",
+    "END FUNCTION\n",
+    "```"
+   ],
+   "id": "5efb3ef10a75a7e"
   },
   {
    "metadata": {
