--- a/point-inside-shape.ipynb
+++ b/point-inside-shape.ipynb
@@ -1,10 +1,22 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "92be08d6",
+   "metadata": {},
    "source": [
-    "# Pseudocode\n",
+    "# Programming Assignment 1: Point Inside Shape\n",
+    "## Members: Andy Dao, Mikhail Filippov, Patrick Saxton\n",
+    "\n",
+    "In this assignment, we are to solve a computation problem of detecting if a given point is inside a shape, and write the algorithm associated with that solution. We are then to analyze the algorithm through a series of techniques learned in class, include testing, proving correctness, and solving for running time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5efb3ef10a75a7e",
+   "metadata": {},
+   "source": [
+    "### Pseudocode\n",
     "```plaintext\n",
     "FUNCTION SegmentCheck(p1, p2, p):\n",
     "    IF (p.x < MIN(p1.x, p2.x) OR p.x > MAX(p1.x, p2.x) OR\n",
@@ -66,17 +78,27 @@
     "    RETURN inside\n",
     "END FUNCTION\n",
     "```"
-   ],
-   "id": "5efb3ef10a75a7e"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dbf8ea6",
+   "metadata": {},
+   "source": [
+    "### Algorithm Implemented:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d4d43cb238006b5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-23T19:53:54.235346Z",
      "start_time": "2025-02-23T19:53:54.225459Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from typing import List, Tuple\n",
     "\n",
@@ -126,19 +148,39 @@
     "        p1 = p2\n",
     "\n",
     "    return inside"
-   ],
-   "id": "d4d43cb238006b5e",
-   "outputs": [],
-   "execution_count": 35
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7daf90eb",
+   "metadata": {},
+   "source": [
+    "### Testing Suite:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dae0172a1cd02509",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-23T19:53:56.426286Z",
      "start_time": "2025-02-23T19:53:56.377466Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 19 tests in 0.009s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "import unittest\n",
     "\n",
@@ -247,34 +289,38 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    unittest.main(argv=[''], exit=False)"
-   ],
-   "id": "dae0172a1cd02509",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "...................\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 19 tests in 0.025s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
-   "execution_count": 36
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b985b43",
+   "metadata": {},
+   "source": [
+    "### General Form of Usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2493162425c60d43",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-23T19:54:01.060450Z",
      "start_time": "2025-02-23T19:54:01.056366Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point is inside the polygon\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    test_point = Point(150, 85)\n",
+    "    test_point = Point(176, 100)\n",
     "\n",
     "    polygon_points = [\n",
     "        Point(186, 14),\n",
@@ -284,37 +330,39 @@
     "    ]\n",
     "\n",
     "    print(\"Point is inside the polygon\" if point_in_polygon(test_point, polygon_points) else \"Point is outside the polygon\")"
-   ],
-   "id": "2493162425c60d43",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point is outside the polygon\n"
-     ]
-    }
-   ],
-   "execution_count": 37
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2709b5e4",
+   "metadata": {},
+   "source": [
+    "### Asymptotic Worst-Case Analysis\n",
+    "Given the main function of the algorithm, `point_in_polygon()`, relies on helper functions, we must first analyze those:\n",
+    "- `point_on_segment()`: This function does not do anything demanding and runs in constant time, given that it is a series of `if` statements with calls to `min()` and `max()`, which also compare two objects in constant time. This gives this helper an O(1).\n",
+    "- `check_intersection()`: As with the above function, this function has even less instructions; it includes simple `if` logic and addition and subtraction statements. This gives this helper an O(1).\n",
+    "\n",
+    "With these in mind, we can now move on to `point_in_polygon()`. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
