Worst-Case Paragraph Complete

--- a/point-inside-shape.ipynb
+++ b/point-inside-shape.ipynb
@@ -338,12 +338,66 @@
    "metadata": {},
    "source": [
     "### Asymptotic Worst-Case Analysis\n",
+    "-------------------\n",
     "Given the main function of the algorithm, `point_in_polygon()`, relies on helper functions, we must first analyze those:\n",
     "- `point_on_segment()`: This function does not do anything demanding and runs in constant time, given that it is a series of `if` statements with calls to `min()` and `max()`, which also compare two objects in constant time. This gives this helper an O(1).\n",
     "- `check_intersection()`: As with the above function, this function has even less instructions; it includes simple `if` logic and addition and subtraction statements. This gives this helper an O(1).\n",
     "\n",
-    "With these in mind, we can now move on to `point_in_polygon()`. "
+    "With these in mind, we can now move on to `point_in_polygon()`. The function is as follows:\n",
+    "\n",
+    "-------------------\n",
+    "```py\n",
+    "def point_in_polygon(point: Point, polygon: List[Point]) -> bool:\n",
+    "    if len(polygon) < 3:\n",
+    "        raise ValueError(\"The list of polygon points must have at least 3 points\")\n",
+    "\n",
+    "    num_of_vertices = len(polygon)\n",
+    "    x, y = point.x, point.y\n",
+    "    inside = False\n",
+    "\n",
+    "    p1 = polygon[0]\n",
+    "\n",
+    "```\n",
+    "-------------------\n",
+    "Up to this point, all operations above this statement have been constant time, so we can reduce them to O(1).\n",
+    "\n",
+    "-------------------\n",
+    "\n",
+    "```py\n",
+    "    for i in range(1, num_of_vertices + 1):\n",
+    "        p2 = polygon[i % num_of_vertices]\n",
+    "\n",
+    "        if point_on_segment(p1, p2, point):\n",
+    "            return True\n",
+    "\n",
+    "        if check_intersection(p1, p2, x, y):\n",
+    "            inside = not inside\n",
+    "\n",
+    "        p1 = p2\n",
+    "\n",
+    "    return inside\n",
+    "```\n",
+    "-------------------\n",
+    "We can see the above `for` loop runs for *n* number of times, where *n* represents the number of vertices on the bounding shape. Because we have stated that both `point_on_segment()` and `check_intersection()` are O(1), we know that there are no more statements within this `for` loop that will raise the time any more.\n",
+    "\n",
+    "#### **Therefore, the worst-case of our function is O(n).**\n",
+    "\n",
+    "-------------------"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b17323a",
+   "metadata": {},
+   "source": [
+    "### Benchmarking:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47750330",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
